--- a/index.html
+++ b/index.html
@@ -15,103 +15,107 @@
   </head>
 
   <body>
-    <nav class="navigation">
-      <a href="#home">home</a>
-      <a href="#mission">mission</a>
-      <a href="#about">about us</a>
-      <a href="#team">our team</a>
-      <a href="#contact">contact</a>
-    </nav>
-    <main class="container">
-      <header class="container__header">
-        <div class="container__text">
-          <h1>
-            <span class="heading-b">B</span>elfast<br /><span class="heading-i"
-              >I</span
-            >nternational<br /><span class="heading-k">K</span>indergarden
-          </h1>
-        </div>
-      </header>
-
-      <div class="container__mission">
-        <div class="container__text">
-          <h2>mission</h2>
-          <p>
-            We believe children should stay children as long as they need and
-            the fact that they enter 1st grade should not end their childhood.
-            We intertwine playing and learning at such an early age and
-            encourage our students to enjoy learning.
-          </p>
-        </div>
-      </div>
-
-      <div class="container__about">
-        <div class="container__text">
-          <h2>about us</h2>
-          <p>
-            We began as a visionary venture in 1998 when Dr. Gabriel and Alish
-            Black, world-class academics in the field of economics, endeavored
-            to find a way to prepare students for college and the real world
-            better than schools did at the time. They quickly found that the
-            best way to make students thrive was simple: challenge them. After
-            opening their first school in 1998, the Blocks discovered that
-            students, when given a well-crafted curriculum and teachers who
-            truly cared about teaching it, were able to learn at exceedingly
-            high levels, meeting and surpassing the best students in the world.
-            What began as a single campus has grown to become a unique,
-            high-achieving, and unprecedented network of schools.
-          </p>
-        </div>
-      </div>
-
-      <div class="container__team">
-        <div class="container__text">
-          <h2>our team</h2>
-          <div class="container__team container__team__member">
-            <img src="img\libby.jpg" alt="libby" />
-            <p class="member__name">Libby Fisher</p>
-            <p class="member__position">Education Program Director</p>
+    <div class="main">
+      <nav class="navigation">
+        <a href="#home">home</a>
+        <a href="#mission">mission</a>
+        <a href="#about">about us</a>
+        <a href="#team">our team</a>
+        <a href="#contact">contact</a>
+      </nav>
+      <main class="container">
+        <header class="container__header">
+          <div class="container__text">
+            <h1>
+              <span class="heading-b">B</span>elfast<br /><span
+                class="heading-i"
+                >I</span
+              >nternational<br /><span class="heading-k">K</span>indergarden
+            </h1>
           </div>
+        </header>
 
-          <div class="container__team container__team__member">
-            <img src="img\phoebe.jpg" alt="phoebe" />
-            <p class="member__name">Phoebe Barnett</p>
-            <p class="member__position">Operations Director</p>
-          </div>
-
-          <div class="container__team container__team__member">
-            <img src="img\joshua.jpg" alt="johua" />
-            <p class="member__name">Joshua Warren</p>
-            <p class="member__position">Early Education Specialist</p>
-          </div>
-
-          <div class="container__team container__team__member">
-            <img src="img\leon.jpg" alt="leon" />
-            <p class="member__name">Leon Saunders</p>
-            <p class="member__position">Early Education Teacher</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="container__contact">
-        <div class="container__text">
-          <h2>contact</h2>
-          <div class="container__contact__address">
+        <div class="container__mission">
+          <div class="container__text">
+            <h2>mission</h2>
             <p>
-              <strong>Address:</strong><br />
-              4 Old Edinburgh Road<br />
-              BELFAST<br />
-              BT1 8RF
-            </p>
-          </div>
-          <div>
-            <p>
-              <strong>Phone:</strong><br />
-              070 2027 9661
+              We believe children should stay children as long as they need and
+              the fact that they enter 1st grade should not end their childhood.
+              We intertwine playing and learning at such an early age and
+              encourage our students to enjoy learning.
             </p>
           </div>
         </div>
-      </div>
-    </main>
+
+        <div class="container__about">
+          <div class="container__text">
+            <h2>about us</h2>
+            <p>
+              We began as a visionary venture in 1998 when Dr. Gabriel and Alish
+              Black, world-class academics in the field of economics, endeavored
+              to find a way to prepare students for college and the real world
+              better than schools did at the time. They quickly found that the
+              best way to make students thrive was simple: challenge them. After
+              opening their first school in 1998, the Blocks discovered that
+              students, when given a well-crafted curriculum and teachers who
+              truly cared about teaching it, were able to learn at exceedingly
+              high levels, meeting and surpassing the best students in the
+              world. What began as a single campus has grown to become a unique,
+              high-achieving, and unprecedented network of schools.
+            </p>
+          </div>
+        </div>
+
+        <div class="container__team">
+          <div class="container__text">
+            <h2>our team</h2>
+            <div class="container__team container__team__member">
+              <img src="img\libby.jpg" alt="libby" />
+              <p class="member__name">Libby Fisher</p>
+              <p class="member__position">Education Program Director</p>
+            </div>
+
+            <div class="container__team container__team__member">
+              <img src="img\phoebe.jpg" alt="phoebe" />
+              <p class="member__name">Phoebe Barnett</p>
+              <p class="member__position">Operations Director</p>
+            </div>
+
+            <div class="container__team container__team__member">
+              <img src="img\joshua.jpg" alt="johua" />
+              <p class="member__name">Joshua Warren</p>
+              <p class="member__position">Early Education Specialist</p>
+            </div>
+
+            <div class="container__team container__team__member">
+              <img src="img\leon.jpg" alt="leon" />
+              <p class="member__name">Leon Saunders</p>
+              <p class="member__position">Early Education Teacher</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="container__contact">
+          <div class="container__text">
+            <h2>contact</h2>
+            <div class="container__contact__address">
+              <p>
+                <strong>Address:</strong><br />
+                4 Old Edinburgh Road<br />
+                BELFAST<br />
+                BT1 8RF
+              </p>
+            </div>
+            <div>
+              <p>
+                <strong>Phone:</strong><br />
+                070 2027 9661
+              </p>
+            </div>
+          </div>
+        </div>
+      </main>
+    </div>
+    div>
   </body>
 </html>
